@@ -5,6 +5,10 @@ Revision history for Date-Easy
     [New Features]
     * New `time_zone` method
 
+    [Interface Changes]
+    * Make `add` and `subtract` in ::Date private methods
+      (this fixes POD coverage tests)
+
     [Distro Fixes]
     * Stop using `\h` in test regexen because 5.8 doesn't recognize it
 
